# hydra

./: .gitignore  AGENTS.md  CHANGES.md  Cargo.toml  Justfile  MIC_LAB_NOTES.md  MIC_LAB_REPORT.md  MIC_LAB_TODO.md  NOTICE  Package.swift  README.md  RELEASE.md  ROADMAP.md  SPD_SKIPPY_PROJECT.md  install-runtime.sh  install.sh  managed-relays.txt  next-goal.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  docker-precheck.yml  docker.yml  hf-download-smoke.yml  hydra-upstream-drift.yml  llama-abi-build.yml  model-fit-validation.yml  pr-checks.yml  pr_builds.yml  release.yml  scripted-binary-smoke.yml  sdk-smoke.yml  smoke.yml  website-pages.yml  windows-warm-caches.yml
ci/: ci.md
crates/hydra/: Cargo.toml  README.md
crates/hydra/src/: lib.rs  network_cost.rs  placement.rs  scheduler.rs  vast.rs
crates/mesh-client/: Cargo.toml
crates/mesh-llm/: Cargo.toml  TODO.md
crates/mesh-llm-a2a/: Cargo.toml  README.md
crates/mesh-llm-a2a/src/: lib.rs
crates/mesh-llm-acp-bridge/: Cargo.toml  README.md
crates/mesh-llm-acp-bridge/src/: lib.rs
crates/mesh-llm-api/: Cargo.toml  README.md
crates/mesh-llm-api-client/: Cargo.toml
crates/mesh-llm-api-server/: Cargo.toml  README.md
crates/mesh-llm-api-server/src/: lib.rs  node.rs
crates/mesh-llm-api-server/tests/: host_node_gated_relay.rs  openai_proxy.rs  public_api.rs
crates/mesh-llm-cli/: Cargo.toml
crates/mesh-llm-commands/: Cargo.toml
crates/mesh-llm-config/: Cargo.toml  README.md
crates/mesh-llm-console-server/: Cargo.toml
crates/mesh-llm-embedded-runtime/: Cargo.toml
crates/mesh-llm-ffi/: Cargo.toml  README.md
crates/mesh-llm-gpu-bench/: Cargo.toml  build.rs
crates/mesh-llm-guardrails/: Cargo.toml
crates/mesh-llm-hardware-profile/: Cargo.toml
crates/mesh-llm-host-runtime/: Cargo.toml
crates/mesh-llm-native-runtime/: README.md
crates/mesh-llm-native-sdk/: Cargo.toml  README.md  build.rs
crates/mesh-llm-native-sdk/src/: lib.rs
crates/mesh-llm-node/: Cargo.toml
crates/mesh-llm-nodejs/: Cargo.toml
crates/mesh-llm-plugin-blackboard/: Cargo.toml
crates/mesh-llm-plugin-blackboard/src/: cli.rs
crates/mesh-llm-plugin-manager/: Cargo.toml
crates/mesh-llm-protocol/: Cargo.toml
crates/mesh-llm-routing/: Cargo.toml
crates/mesh-llm-runtime-install/: Cargo.toml
crates/mesh-llm-sdk/: Cargo.toml
crates/mesh-llm-sdk/src/: lib.rs
crates/mesh-llm-system/: Cargo.toml
crates/mesh-llm-tui/: Cargo.toml
crates/mesh-llm-ui/: index.html  package-lock.json  package.json
crates/mesh-mixture-of-agents/: Cargo.toml
crates/mesh-mlx/: Cargo.toml  README.md
crates/mesh-mlx-sys/: Cargo.toml  README.md  build.rs
crates/mesh-mlx-sys/src/: lib.rs  stubs.rs
crates/model-artifact/: Cargo.toml
crates/model-fit/: Cargo.toml  README.md
crates/model-hf/: Cargo.toml
crates/model-package/: Cargo.toml
crates/model-ref/: Cargo.toml
crates/model-resolver/: Cargo.toml
crates/openai-frontend/: Cargo.toml
crates/skippy-bench/: README.md
crates/skippy-cache/: Cargo.toml
crates/skippy-coordinator/: README.md
crates/skippy-correctness/: README.md
crates/skippy-ffi/: Cargo.toml  build.rs
crates/skippy-model-package/: README.md
crates/skippy-protocol/: README.md
crates/skippy-quantize/: Cargo.toml  README.md
crates/skippy-quantize/src/: argv_alias.rs  artifacts.rs  backend.rs  convert.rs  direct_convert.rs  direct_quantize.rs  float_convert.rs  gguf_template.rs  gguf_writer.rs  gguf_writer_tests.rs  imatrix.rs  llama_load.rs  locking.rs  main.rs  manifest.rs  memory_budget.rs  native_convert.rs  native_quantize.rs  output.rs  plan_convert.rs  preflight.rs  quantize.rs  records.rs  residency.rs  shims.rs  splits.rs  tensor_map.rs  tokenizer_metadata.rs  tool_paths.rs  type_catalog.rs  types.rs  validation_commands.rs  verify.rs  verify_command.rs  window_loop.rs
crates/skippy-quantize/tests/: argv0_shims_cli.rs  direct_convert_cli.rs  direct_quantize_cli.rs
crates/skippy-runtime/: Cargo.toml
crates/skippy-runtime/src/: devices.rs  lib.rs  package.rs  spd.rs
crates/skippy-runtime/src/spd/: gguf_embedding.rs  live_tap.rs  qwen.rs  safetensors.rs  tap_input.rs  tap_plan.rs
crates/skippy-server/: Cargo.toml
docker/: Dockerfile.client  Dockerfile.quant-pack-job
docker/skippy-wan-lab/: .env.example  README.md  docker-compose.yml  entrypoint.sh
docs/: AGENTS.md  CI_GUIDANCE.md  CLI.md  EXO_COMPARISON.md  LAYER_PACKAGE_REPOS.md  MESHES.md  MLX.md  README.md  SDK.md  SKIPPY.md  SKIPPY_SPLITS.md  USAGE.md  index.html
docs/assets/: copy-code.js
docs/catalog/: index.html
docs/design/: CLI_ON_TOP_OF_SDK.md  CRATE_DECOMPOSITION.md  DESIGN.md  GLM_NATIVE_MTP_SKIPPY.md  (+9 more)
fly/: Dockerfile  README.md
scripts/: affected-crates.sh  build-linux.sh  build-llama-quantize.sh  build-llama.sh  build-mac.sh  build-release.sh  build-ui.sh  build-windows.ps1  check-sdk-contract.sh  ci-client-auto-test.sh  ci-hf-download-smoke.sh  ci-kotlin-sdk-smoke.sh  ci-swift-sdk-smoke.sh  generate-native-runtime-release-manifest.sh  glm-dsa-bf16-rebuild-window-test.sh  glm-dsa-bf16-rebuild-window.sh  glm-dsa-bf16-repair-stale-shards-test.sh  glm-dsa-bf16-repair-stale-shards.sh  glm-dsa-gguf-contract-mutator.py  glm-dsa-indexshare-local-smoke.sh  glm-dsa-inventory-verifier.py  glm-dsa-metal-microbench.sh  glm-dsa-native-indexshare-proof.sh  glm-dsa-native-indexshare-sweep.sh  glm-dsa-phase-a-local-gate.sh  glm-dsa-phase-b-indexshare-parity.sh  glm-dsa-tiny-contract-fixture.py  glm52-lightning-indexer-lab-bench.sh  glm52-multi-session-openai-bench.sh  glm52-phase-a-malformed-indexshare-negative.sh  glm52-phase-a-missing-indexshare-negative.sh  glm52-phase-a-position-wrong-width-indexshare-negative.sh  glm52-phase-a-real-warmup-wrong-width-indexshare-negative.sh  glm52-phase-a-wrong-width-indexshare-negative.sh  glm52-phase-ab-real-indexshare-matrix.sh  glm52-phase-b-closeout-gate.sh  glm52-phase-b-indexshare-matrix.sh  glm52-phase-b-real-indexshare-parity.sh  glm52-phase-c-direct-sparse-decode-gate.sh  glm52-phase-c-sparse-attn-closeout-gate.sh  (+24 more)
sdk/: README.md
website/: .eleventy.js  README.md
(+573 files in other folders)
