[package]
name = "mesh-llm-api-server"
version.workspace = true
edition = "2021"
description = "Public Rust SDK for embedding Mesh LLM nodes in applications"
license = "Apache-2.0"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "sdk", "api", "node"]
categories = ["api-bindings", "network-programming"]

[features]
host-io = ["mesh-llm-api-client/host-io"]

# Run a real iroh-backed mesh node in-process (gossip, relay registration
# including --relay-auth, invite tokens, QUIC peer connections), instead of
# the default HTTP-shim client behaviour. Drags `mesh-llm-host-runtime` and
# its transitive deps (skippy, llama.cpp link path, etc.) into the build,
# so it is off by default. Consumers who want a Rust app to act as a real
# mesh peer should enable it.
host-runtime = ["dep:mesh-llm-host-runtime"]

[dependencies]
anyhow.workspace = true
mesh-llm-api-client = { path = "../mesh-llm-api-client", version = "0.66.0" }
mesh-llm-node = { path = "../mesh-llm-node", version = "0.66.0" }
# Optional, gated by the `host-runtime` feature.
mesh-llm-host-runtime = { path = "../mesh-llm-host-runtime", optional = true, default-features = false }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
# In-process iroh-relay for testing the host-runtime feature: real
# AccessConfig::Restricted relay, real endpoint bind, real WebSocket
# upgrade. Same dev-dep iroh feature combo `mesh-llm-host-runtime`
# already uses for its own gated-relay tests.
iroh = { version = "1.0.0-rc.0", features = ["test-utils"] }
iroh-relay = { version = "1.0.0-rc.0", features = ["server", "test-utils"] }
futures-util = "0.3"
base64 = "0.22"
serde_json = "1"
