[package]
name = "mesh-llm-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["client", "serve"]
client = ["dep:anyhow", "dep:mesh-llm-host-runtime", "dep:serde_json"]
serve = ["dep:anyhow", "dep:mesh-llm-host-runtime", "dep:serde_json"]
web-ui = ["mesh-llm-host-runtime?/web-ui"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
mesh-llm-host-runtime = { path = "../mesh-llm-host-runtime", default-features = false, optional = true }
