[package]
name = "skippy-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
dynamic-native-runtime = ["skippy-ffi/dynamic-runtime"]

[dependencies]
anyhow.workspace = true
skippy-ffi = { path = "../skippy-ffi" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
libc = "0.2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
